--- a/.env.testnet
+++ b/.env.testnet
@@ -1,8 +1,8 @@
 NODE_ENV = testnet
 
 # Spooky
-VUE_APP_CONTACT_ADDRESS = '0xa8D57878C83FB88106E63B890e5f69b3D11174ca'
-VUE_APP_TOKENID = '57'
+VUE_APP_CONTACT_ADDRESS = '0x7B3963Db4B5A5017a8C8979Bfa8997500De5A059'
+# VUE_APP_TOKENID = '57'
 
 # RPC 
 VUE_APP_CHAINID = '137'
